<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="4"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/sphero"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/stock_image" />
    </LinearLayout>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button_text"
        android:onClick="start"
        style="@style/Button" />

    <Button
        android:id="@+id/startLabyrinthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_labyrinth_button_text"
        android:onClick="startLabyrinth"
        style="@style/Button" />

    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>