<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/standard_inset">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_view_point_value_text_size"
            android:id="@+id/pointValue"
            android:layout_weight="1" />

        <TextView
            android:text="@string/correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text_view_point_value_text_size"
            android:textAllCaps="true"
            android:textColor="@color/textViewCorrectAnswerBorderColor"
            android:id="@+id/correctDisplay"
            android:layout_weight="1" />

        <TextView
            android:text="@string/incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/text_view_point_value_text_size"
            android:textAllCaps="true"
            android:textColor="@color/textViewIncorrectAnswerBorderColor"
            android:id="@+id/incorrectDisplay"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="This is where the question will go, it might be fairly long long long...?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/question"
        style="@style/QuestionTextView"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:text="Answer A si longer than the others"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/answerA"
                android:textAllCaps="false"
                style="@style/QuestionButton"/>

            <Button
                android:text="Answer B"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/answerB"
                android:textAllCaps="false"
                style="@style/QuestionButton" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent" >

            <Button
                android:text="Answer C"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/answerC"
                android:textAllCaps="false"
                style="@style/QuestionButton"/>

            <Button
                android:text="Answer D is also pretty long"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/answerD"
                android:textAllCaps="false"
                style="@style/QuestionButton"/>

        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/continue_labyrinth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continueLabyrinthButton"
        style="@style/PrimaryButton" />

</LinearLayout>